--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tela Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaquery.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -19,7 +20,25 @@
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. faça login para acessar sua conta.</p>
                 <form action="" method="post">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            person
+                        </span>
+                        <input type="email" name="login" id="ilogin" placeholder=" seu e-mail" required>
+                        <label for="ilogin">Login</label>
+                    </div>
 
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            vpn_key
+                        </span>
+                        <input type="password" name="senha" id="isenha"  placeholder=" sua senha" minlength="8" maxlength="20" required>
+                        <label for="isenha">Senha</label>
+                    </div> 
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                    </a>
                 </form>
             </div>
         </section>
